# bbsensor

./: .gitignore  .gitmessages  README.md
doc/: ADC.ods  Calibration.ods  Pt100.ods
firmware/: BBSensor.workspace  BBSensor.workspace.layout  BBSensor32.workspace  BBSensor8266.workspace  CMakeLists.txt  Makefile
firmware/app/: Makefile  button.cpp  button.h  channel.cpp  channel.h  click.cpp  click.h  conf.cpp  conf.h  config.mk  control.cpp  control.h  data.cpp  data.h  device.cpp  device.h  display.cpp  display.h  dout.cpp  dout.h  eagle.app.v6.common.ld.h  hardware.cpp  hardware.h  led.cpp  led.h  loop.cpp  loop.h  main.cpp  rules.esp32.mk  rules.esp8266.mk  rules.mk  sensor.cbp  sensor.esp32.cbp  sensor.esp8266.cbp  settings.h  setup.mk  sources.mk  spi_wrapper.cpp  spi_wrapper.h  tables.cpp  (+10 more)
firmware/app/devices/: device.cpp
firmware/cmake/: .gitignore  config.cmake  config.cmake.template  esp8266.cmake  log.cmake  setup.cmake
firmware/ext/CRC32/: Makefile  config.mk  lib.mk
firmware/ext/core/: Makefile  clean.bat  config.mk  core.cbp  core.layout  depends.mk  depends_core.mk  depends_libb64.mk  depends_malloc.mk  depends_spiffs.mk  flags.mk  lib.mk  objects.mk  path.mk  rules.mk  setesp.bat  sources.mk
firmware/ext/eeprom/: Makefile  config.mk  flags.mk  lib.mk  path.mk  rules.mk  sources.mk
firmware/ext/esp8266mdns/: config.mk  lib.mk
firmware/ext/esp8266webserver/: config.mk  objects.mk  rules.mk
firmware/ext/esp8266wifi/: Makefile  config.mk  flags.mk  lib.mk  path.mk  rules.mk  sources.mk
firmware/ext/softwareserial/: config.mk  lib.mk
firmware/ext/spi/: Makefile  config.mk  flags.mk  lib.mk  path.mk  rules.mk  sources.mk
firmware/lib/: Makefile  config.mk  lib.mk  libbb.cbp  sources.mk
firmware/lib/include/: hardware.h  led.h  temperature.h
firmware/lib/src/: tables.cpp
firmware/notes/: build.options.json  compile.txt  defines.txt  include.txt  options.txt
firmware/prj/: board.mk  board.mk.template  config.mk  config.mk.template  default.conf  notes.txt
firmware/prj/config/: debug.mk  setup.mk
firmware/prj/rules.esp32/: ccflags.mk  cflags.mk  debug.mk  ldflags.mk  list.mk  path.mk  upload.mk  vars.mk
firmware/prj/rules.esp8266/: asmflags.mk  ccflags.mk  cflags.mk  debug.mk  ldflags.mk  list.mk  path.mk  tools.mk  vars.mk
firmware/prj/tools/: debug.mk  libmake.mk  libmake_app.mk  libmake_lib.mk  log.mk  rules.mk  run.mk  setup.mk
firmware/rules/: config.mk.template  flags.mk  libraries.mk  rules.mk  setup.mk
firmware/sketch/blink/: blink.ino
firmware/src/: .gitignore  Makefile  button.cpp  button.h  click.cpp  click.h  config.h  config.mk  data.cpp  data.h  depends.mk  devices.cpp  devices.h  eagle.app.v6.common.ld.h  flags.mk  hardware.cpp  hardware.h  led.cpp  led.h  loop.cpp  loop.h  main.cpp  objects.mk  path.mk  rules.mk  sensor.cbp  sensor.cpp  sensor.layout  sources.mk
firmware/src/core/: CMakeLists.txt  Makefile
firmware/src/data/: loop.cpp  tables.cpp
firmware/src/devices/: button.cpp  channel.cpp  click.cpp  device.cpp  display.cpp  hardware.cpp  led.cpp  temperature.cpp  transfer.cpp
firmware/src/include/: button.h  channel.h  click.h  conf.h  config.h  debug.h  device.h  display.h  hardware.h  led.h  loop.h  settings.h  tables.h  temperature.h  transfer.h  utils.h
firmware/src/sensor/: sensor.cbp
firmware/src/utils/: conf.cpp  utils.cpp
hardware/DC/: PCB.gvp
hardware/DC/pcb/: DC.kicad_pcb  DC.pro  DC.sch  sym-lib-table
hardware/DC/plot/: DC-B_Cu.gbl  DC-B_Mask.gbs  DC-Edge_Cuts.gm1  DC-F_Cu.gtl  DC-F_Mask.gts  DC-F_SilkS.gto  DC-NPTH.drl  DC-PTH.drl
hardware/Display/: PCB.gvp
hardware/Display/bom/: ibom.html
hardware/Display/pcb/: Display.kicad_pcb  Display.sch  sym-lib-table
hardware/Display/plot/: Display-B_Cu.gbl  Display-B_Mask.gbs  Display-B_SilkS.gbo  Display-Edge_Cuts.gm1  Display-F_Cu.gtl  Display-F_Mask.gts  Display-F_SilkS.gto  Display-NPTH.drl  Display-PTH.drl
hardware/Mini/: PCB.gvp
hardware/Mini/bom/: ibom.html
hardware/Mini/cad/: BBMini.FCStd  Panel_Back.dxf  Panel_Back.fpd  Panel_Front.dxf  Panel_Front.fpd
hardware/Mini/pcb/: ADC.sch  BBMini.kicad_pcb  BBMini.pro  BBMini.sch  Display.sch  ESP8266.sch  Power.sch
hardware/Mini/plot/: BBMini-B_Cu.gbl  BBMini-B_Mask.gbs  BBMini-Edge_Cuts.gm1  BBMini-F_Cu.gtl  BBMini-F_Mask.gts  BBMini-F_SilkS.gto  BBMini-NPTH.drl  BBMini-PTH.drl
hardware/Mini2/cad/: 9V_Case.step  Mini2.FCStd
hardware/Mini2/pcb/: ADC.sch  BBMini2-eagle-import.lib  BBMini2.erc  BBMini2.kicad_pcb  BBMini2.pro  BBMini2.sch  Display.sch  ESP8266.sch  ESP8266EX.sch  IO.sch  Power.sch  Serial.sch  Temperature.sch
hardware/Mini3/pcb/: BBMini3.asc  BBMini3.erc  BBMini3.kicad_pcb  BBMini3.lib  BBMini3.sch  ESP8266EX.sch  Power.sch  Processing.sch  Serial.sch  Temperature.sch
hardware/Mini32/cad/: CE3_Case.gcode  CE3_Lid.gcode  CE3_Plunger.gcode  Case.stl  Lid.stl  Mini32-Case.gcode  Mini32-Case.stl  Mini32-Lid.gcode  Mini32-Lid.stl  Mini32.FCStd  Plunger.stl
hardware/Mini32/pcb/: ADC.sch  BBMini32.pro  (+6 more)
hardware/PTC/: PCB.gvp
hardware/RTD/: PCB.gvp
hardware/Sensor/: PCB.gvp
hardware/cad/: BBSensor.FCStd  PTC.wrl  Pt100.wrl
pcb/: ADC.sch  BBSensor.kicad_pcb  BBSensor.pro  BBSensor.sch  Display.sch  ESP8266.sch  Power.sch  Temperature1.sch  Temperature2.sch  Temperature3.sch  Temperature4.sch  fp-info-cache
prj/: BOM.ods  commit-message
sketch/blink/: blink.ino
src/: BBSensor.workspace  BBSensor.workspace.layout
src/core/: .gitignore  core.cbp  core.depend  prepare.bat
src/notes/: blink.ino.cpp  compile.txt  core.txt
src/sensor/: sensor.cbp  sensor.cpp
(+79 files in other folders)
